@@ -14,42 +14,50 @@ How to get MCX
 
 1. Download the Latest Release
 
-Beta release: MCX 0.4.9, released on Aug. 01, 2010
+Current Stable Release: [7]MCX and [8]MCXLAB 0.5.1, released on Jun. 06, 2011
 
-   Please read the [7]Release notes here. Before downloading the software,
-   please read the [8]System Requirements for MCX and make sure you have
+   Please read the [9]Release notes here. Before downloading the software,
+   please read the [10]System Requirements for MCX and make sure you have
    both the hardware and software supports.
 
-   Please download MCX v0.4.9 (aka Black-hole Beta) release at our
-   [9]registration/download page. We are greatly appreciated if you can
+   Please download MCX and MCXLAB v0.5.1 (Black Hole - Update 1) at our
+   [11]registration/download page. We are greatly appreciated if you can
    tell us a little bit about you and your related research by
-   [10]registering your copy of mcx. Binary executable (for 32bit and
-   64bit machines) and source code packages are both provided.
+   [12]registering your copy of MCX. Binary executable (for 32bit and
+   64bit machines) and source code packages are both provided. For MCXLAB,
+   a single package containing the pre-compiled Matlab/Octave MEX files
+   for 32/64bit Linux and 32/64bit Windows is provided.
+
   [os-icons3.png]
 
-Stable release: MCX 0.2 (final), released on Dec 19, 2009
+Previous Beta Release: MCX 0.5.0, released on Mar. 20, 2011
 
-   Please download MCX v0.2 (Aurora) stable release at our
-   [11]registration/download page.
+   Please read the [13]Release notes here.
+
+Previous Beta Release: MCX 0.4.9, released on Aug. 01, 2010
+
+   Please read the [14]Release notes here.
 
 2. Download Development Snapshot from SVN (not fully tested)
 
    If you want to get the latest development branch of MCX, you can
-   download it from our svn. You have to be aware that an SVN snapshot is
+   download it from our SVN. You have to be aware that an SVN snapshot is
    not a stable release. It may have partially implemented features and,
    thus, cause crash or erroneous results.
 
    First, make sure you have installed svn client on your system. If you
    are using a Debian-based GNU/Linux system (such as Ubuntu, Knoppix
    etc), you can install svn by
+
  sudo apt-get install subversion
 
    if you are using a Redhat-based GNU/Linux system (such as Fedora,
    CentOS etc), you can do this by
+
  su -c 'yum install subversion'
 
    If your operating system is Windows, we recommend you installing
-   [12]TortoiseSVN.
+   [15]TortoiseSVN.
 
 2.1. Anonymous SVN Access
 
@@ -59,7 +67,7 @@ Stable release: MCX 0.2 (final), released on Dec 19, 2009
  svn checkout --username anonymous_user https://orbit.nmr.mgh.harvard.edu/svn/mcextreme/mcextreme_cuda/trunk/ mcx
 
    The password is the same as the username. After you checking out the
-   code, you can [13]compile and run the software.
+   code, you can [16]compile and run the software.
 
 2.2. Developer SVN Access
 
@@ -68,13 +76,14 @@ Stable release: MCX 0.2 (final), released on Dec 19, 2009
 
  svn checkout --username youraccount https://orbit.nmr.mgh.harvard.edu/svn/mcextreme/mcextreme_cuda/trunk/ mcx
 
-   where youraccount is your registered account in [14]orbit (of course,
-   you have to [15]register first and ask the [16]project maintainer to
+   where youraccount is your registered account in [17]orbit (of course,
+   you have to [18]register first and ask the [19]project maintainer to
    grant you svn write permission).
 
    You can simply make changes or debug your changes in your local copy.
    If your local changes have passed review by other co-developers, you
    can then commit your changes back to the svn repository by
+
  cd /path/to/mcx/local/copy
  svn commit -m "a short summary of your changes"
 
@@ -99,13 +108,16 @@ References
    4. http://mcx.sourceforge.net/cgi-bin/index.cgi?Download#Anonymous_SVN_Access
    5. http://mcx.sourceforge.net/cgi-bin/index.cgi?Download#Developer_SVN_Access
    6. http://mcx.sourceforge.net/cgi-bin/index.cgi?Download#References
-   7. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/ReleaseNotes/0.4.9
-   8. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/Installation
-   9. http://mcx.sourceforge.net/cgi-bin/index.cgi?register/mcx
-  10. http://mcx.sourceforge.net/cgi-bin/index.cgi?action=edit&editmode=prepend&id=register/mcx
+   7. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/README
+   8. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/MCXLAB
+   9. http://mcx.sourceforge.net/cgi-bin/index.cgi?action=edit&id=Doc/ReleaseNotes/0.5.1
+  10. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/Installation
   11. http://mcx.sourceforge.net/cgi-bin/index.cgi?register/mcx
-  12. http://tortoisesvn.net/downloads
-  13. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/Installation
-  14. https://orbit.nmr.mgh.harvard.edu/
-  15. https://orbit.nmr.mgh.harvard.edu/account/register.php
-  16. https://orbit.nmr.mgh.harvard.edu/users/fangq/
+  12. http://mcx.sourceforge.net/cgi-bin/index.cgi?action=edit&editmode=prepend&id=register/mcx
+  13. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/ReleaseNotes/0.5.0
+  14. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/ReleaseNotes/0.4.9
+  15. http://tortoisesvn.net/downloads
+  16. http://mcx.sourceforge.net/cgi-bin/index.cgi?Doc/Installation
+  17. https://orbit.nmr.mgh.harvard.edu/
+  18. https://orbit.nmr.mgh.harvard.edu/account/register.php
+  19. https://orbit.nmr.mgh.harvard.edu/users/fangq/
